fixed btn alignment

--- a/assets/styles/dinnerdice.css
+++ b/assets/styles/dinnerdice.css
@@ -2,6 +2,7 @@
 body{
   background: white;
   background-image: url(../images/shutterstock_740473780.jpg);
+  
 }
 
 /*CSS on main content page*/
@@ -38,7 +39,7 @@ h1{
 .card-w-75{
   margin-top: 15%;
   border: 2px solid #c12026;
-  width: 40%;
+  width: 50%;
   margin-left: 5%;
   padding: 10px;
   box-shadow: 4px 4px 10px 3px;
@@ -49,7 +50,7 @@ h1{
 .card2-w-75{
   margin-top: 10px;
   border: 2px solid #c12026;
-  width: 40%;
+  width: 50%;
   margin-left: 5%;
   padding: 10px;
   box-shadow: 4px 4px 10px 3px;
@@ -65,7 +66,7 @@ h1{
   color: #c12026;
   background: white;
   display: block;
-  width: 50%;
+  width: 85%;
   margin: auto;
 }
 
